task 3 to-do list

--- a/TASK-3/index.html
+++ b/TASK-3/index.html
@@ -9,6 +9,15 @@
     <title>To-Do</title>
 </head>
 <body>
-    
+    <form>
+        <input type="text" placeholder="enter task to-do" id="todoContent">
+        <input type="number" min="0" max="24" placeholder="duration" id="todoDuration">
+        <button type="submit" id="submitBtn">+</button>
+    </form>
+
+    <div class="container">
+        <ul id="todoList"></ul>
+    </div>
 </body>
 </html>
+<!-- favicon used from https://dribbble.com/tonehal -->
